# RLVacDiffSim

./: .gitignore  README.md  environment.yml  environment_uma.yml  pyproject.toml
configs/: deploy_dql.toml  deploy_dql_lss.toml  deploy_dql_tks.toml  deploy_drl_lss.toml  deploy_drl_tks.toml  deploy_mcmc.toml  gen_pretrain_data.toml  gen_time_dataset.toml  train_context_bandit.toml  train_dqn.toml  train_reaction_model.toml  train_time.toml
data/: POSCAR_0.txt  model_trained
data/pool_256_1/: POSCAR_0
demo/: config.toml
demo/poscars/: POSCAR_0
dev/: action_test.ipynb
rlsim/: environment.py  memory.py
rlsim/actions/: action.py
rlsim/cli/: main.py
rlsim/cli/scripts/: estimate_time.py  gen_pretrain_data.py  gen_time_dataset.py  parse_diffusivity.py  parse_memory.py  parse_sro.py  parse_time_dataset.py  parse_time_dataset_binary.py  train_reaction_model.py
rlsim/drl/: deploy.py  gen_reaction_dataset.py  simulator.py  simulator_old.py  train.py  trainer.py  trainer_old.py
rlsim/time/: deploy.py  gen_time_dataset.py  misc.py  train.py
rlsim/utils/: __init__.py  extract_goal_state.py  logger.py  plot_SRO.py  plot_diffusivity.py  sro.py
scripts/: estimate_time.py  gen_pretrain_data.py  gen_time_dataset.py  parse_memory.py
